# ssdp-scanner

./: .clang-format  CMakeLists.txt  README.md  Remote.pro  SSDPScanner.pro  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  remotemain.cpp  remotemain.h  remotemain.ui  remotepanel.cpp  remotepanel.h  scanssdp.cpp  scanssdp.h
RemoteTest/: RemoteTest.pro  tst_testscanssdp.cpp
RemoteUnitTest/: RemoteUnitTest.pro  tst_testremote.cpp
